--- a/index.html
+++ b/index.html
@@ -542,7 +542,218 @@
     </section>
     <!-- end of special products -->
 
+    <!-- blogs -->
+    <section id="offers" class="py-5">
+        <div class="container">
+            <div class="row d-flex align-items-center justify-content-center text-center justify-content-lg-start text-lg-start">
+                <div class="offers-content">
+                    <span class="text-white"> Discount Up to 40% </span>
+                    <h2 class="mt-2 mb-4 text-white">Sale Offer!</h2>
+                    <a href="!#" class="btn">Buy Now</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of blogs -->
 
+    <!-- blogs -->
+    <section id="blogs" class="py-5">
+        <div class="container">
+            <div class="title text-center py-5">
+                <h2 class="position-relative d-inline-block">
+                    Our Lastest Blog
+                </h2>
+            </div>
+
+            <div class="row g-3">
+                <div class="card border-0 col-md-6 col-lg-4 bg-transparent my-3">
+                    <img src="images/blog-1.jpg" alt="">
+                    <div class="card-body px-0">
+                        <h4 class="card-title">Simply the Best Blueberry Pie</h4>
+                        <p class="card-text mt-3 text-muted">
+                            This slightly updated recipe produces a better-than-ever blueberry pie. Reader reviews reporting a soupy, runny filling inspired me to rework the baking instructions on my original 2016 recipe and make a slight change to the filling ingredients. My team and I tested a LOT of blueberry pies in the last few weeks. We searched for the magic trick to a perfectly flavorful, non-runny blueberry pie.
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted">
+                                <span class="fw-bold">Author: </span>
+                                Sally Doe
+                            </small>
+                        </p>
+                        <a href="!#" class="btn">Read More</a>
+                    </div>
+                </div>
+
+                <div class="card border-0 col-md-6 col-lg-4 bg-transparent my-3">
+                    <img src="images/blog-2.jpg" alt="">
+                    <div class="card-body px-0">
+                        <h4 class="card-title">Homemade Cinnamon Rolls</h4>
+                        <p class="card-text mt-3 text-muted">
+                            This cinnamon rolls recipe has lived on the site since 2014. After making countless more batches since I published the recipe plus answering readers’ comments and questions, I thought it would be beneficial to update the post with more helpful information and success tips. Homemade cinnamon rolls are a popular breakfast choice, so I want to make sure you have all the resources you need for this classic recipe.
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted">
+                                <span class="fw-bold">Author: </span>
+                                Sally Doe
+                            </small>
+                        </p>
+                        <a href="!#" class="btn">Read More</a>
+                    </div>
+                </div>
+
+                <div class="card border-0 col-md-6 col-lg-4 bg-transparent my-3">
+                    <img src="images/blog-3.jpg" alt="">
+                    <div class="card-body px-0">
+                        <h4 class="card-title">Peanut Butter Filled Brownie Cookies</h4>
+                        <p class="card-text mt-3 text-muted">
+                            Sometimes you just need a cookie. Last month it was my mission to bake some sort of stuffed peanut butter/chocolate cookie creation. I have recipes for both peanut butter swirl brownies and peanut butter stuffed brownies (and pb cup stuffed chocolate cookies in my cookbook) and questioned if this was really even necessary…
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted">
+                                <span class="fw-bold">Author: </span>
+                                Sally Doe
+                            </small>
+                        </p>
+                        <a href="!#" class="btn">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of blogs -->
+
+
+    <!-- about us -->
+    <section class="py-5" id="about">
+        <div class="container">
+            <div class="row gy-lg-5 align-items-center">
+                <div class="col-lg-6 order-lg-1 text-center text-lg-start">
+                    <div class="title pt-3 pb-5">
+                        <h2 class="position-relative d-inline-block ms-4">About Us</h2>
+                    </div>
+                    <p class="lead text-muted">Lalalalala</p>
+                    <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt alias delectus cum porro facere. Qui deleniti et laborum voluptate modi!</p>
+                </div>
+                <div class="col-lg-6 order-lg-0">
+                    <img src="images/about.jpg" alt="" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of about us -->
+    <!-- popular -->
+    <section id="popular" class="py-5">
+        <div class="container">
+            <div class="title text-center pt-3 pb-5">
+                <h2 class="position-relative d-inline-block ms-4">
+                    Popular of this Week
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="col-md-6 col-lg-4 g-3 row">
+                    <h3 class="fs-5">Top Rated</h3>
+                    <div class="d-flex align-items-center justify-content-start">
+                        <img src="images/cake-2.jpg" alt="" class="img-fluid pe-3 w-25">
+                        <div class="">
+                            <p class="mb-0">Cake</p>
+                            <span>$ 25.00</span>
+                        </div>
+                    </div>
+
+                    <div class="d-flex align-items-center justify-content-start">
+                        <img src="images/cake-12.jpg" alt="" class="img-fluid pe-3 w-25">
+                        <div class="">
+                            <p class="mb-0">Cake</p>
+                            <span>$ 25.00</span>
+                        </div>
+                    </div>
+
+                    <div class="d-flex align-items-center justify-content-start">
+                        <img src="images/cake-7.jpg" alt="" class="img-fluid pe-3 w-25">
+                        <div class="">
+                            <p class="mb-0">Cake</p>
+                            <span>$ 25.00</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4 row g-3">
+                    <h3 class="fs-5">On Sale</h3>
+                    <div class="d-flex align-items-center justify-content-start">
+                        <img src="images/cake-3.jpg" alt="" class="img-fluid pe-3 w-25">
+                        <div class="">
+                            <p class="mb-0">Cake</p>
+                            <span>$ 25.00</span>
+                        </div>
+                    </div>
+
+                    <div class="d-flex align-items-center justify-content-start">
+                        <img src="images/cake-1.jpg" alt="" class="img-fluid pe-3 w-25">
+                        <div class="">
+                            <p class="mb-0">Cake</p>
+                            <span>$ 25.00</span>
+                        </div>
+                    </div>
+
+                    <div class="d-flex align-items-center justify-content-start">
+                        <img src="images/cake-6.jpg" alt="" class="img-fluid pe-3 w-25">
+                        <div class="">
+                            <p class="mb-0">Cake</p>
+                            <span>$ 25.00</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-4 row g-3">
+                    <h3 class="fs-5">Best Selling</h3>
+                    <div class="d-flex align-items-center justify-content-start">
+                        <img src="images/cake-8.jpg" alt="" class="img-fluid pe-3 w-25">
+                        <div class="">
+                            <p class="mb-0">Cake</p>
+                            <span>$ 25.00</span>
+                        </div>
+                    </div>
+
+                    <div class="d-flex align-items-center justify-content-start">
+                        <img src="images/cake-9.jpg" alt="" class="img-fluid pe-3 w-25">
+                        <div class="">
+                            <p class="mb-0">Cake</p>
+                            <span>$ 25.00</span>
+                        </div>
+                    </div>
+
+                    <div class="d-flex align-items-center justify-content-start">
+                        <img src="images/cake-11.jpg" alt="" class="img-fluid pe-3 w-25">
+                        <div class="">
+                            <p class="mb-0">Cake</p>
+                            <span>$ 25.00</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <!-- end of popular -->
+
+    <!-- news -->
+    <section class="py-5" id="newsletter">
+        <div class="container">
+            <div class="d-flex flex-column align-items-center justify-content-center">
+                <div class="title text-center pt-3 pb-5">
+                    <h2 class="position-relative d-inline-block ms-4">Newsletter Subscription</h2>
+                </div>
+                <p class="text-center text-muted">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit illum nemo voluptates distinctio, dolor similique provident fuga itaque accusamus? Unde?
+                </p>
+                <div class="input-group mb-3 mt-3">
+                    <input type="text" class="form-control" placeholder="Enter your email ...">
+                    <button class="btn btn-primary" type="submit">Subscribe</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of news -->
 
     <!-- jquery -->
     <script src="js/jquery-3.6.0.js"></script>
