--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <a href="#header" class="nav-link text-uppercase text-dark">home</a>
                     </li>
                     <li class="nav-item px-2 py-2">
-                        <a href="#products" class="nav-link text-uppercase text-dark">products</a>
+                        <a href="#collection" class="nav-link text-uppercase text-dark">products</a>
                     </li>
                     <li class="nav-item px-2 py-2">
                         <a href="#specials" class="nav-link text-uppercase text-dark">specials</a>
@@ -465,7 +465,7 @@
     <!-- end of section -->
 
     <!-- special products -->
-    <section id="special" class="py-5">
+    <section id="specials" class="py-5">
         <div class="container">
             <div class="title text-center py-5">
                 <h2 class="position-relative d-inline-block">
@@ -630,7 +630,7 @@
                     <div class="title pt-3 pb-5">
                         <h2 class="position-relative d-inline-block ms-4">About Us</h2>
                     </div>
-                    <p class="lead text-muted">Lalalalala</p>
+                    <p class="lead text-muted">Best Bakery in London</p>
                     <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt alias delectus cum porro facere. Qui deleniti et laborum voluptate modi!</p>
                 </div>
                 <div class="col-lg-6 order-lg-0">
@@ -754,6 +754,108 @@
         </div>
     </section>
     <!-- end of news -->
+
+    <!-- footer -->
+    <footer class="bg-dark py-5">
+        <div class="container">
+            <div class="row text-white g-4">
+                <div class="col-md-6 col-lg-3">
+                    <a href="index.html" class="text-uppercase text-decoration-none brand text-white">
+                        cake bakery
+                    </a>
+                    <p class="text-white mt-3">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo mollitia atque libero iste ipsum adipisci, porro reiciendis omnis, earum corrupti, eaque hic autem sit sequi tempore id officia ea cupiditate.
+                    </p>
+                </div>
+
+                <div class="col-md-6 col-lg-3">
+                    <h5 class="fw-light">Links</h5>
+                    <ul class="list-unstyled">
+                        <li class="my-3">
+                            <a href="#" class="text-white text-decoration-none">
+                                <i class="fas fa-chevron-right me-1"></i>Home
+                            </a>
+                        </li>
+                        <li class="my-3">
+                            <a href="#" class="text-white text-decoration-none">
+                                <i class="fas fa-chevron-right me-1"></i>New Offers
+                            </a>
+                        </li>
+                        <li class="my-3">
+                            <a href="#" class="text-white text-decoration-none">
+                                <i class="fas fa-chevron-right me-1"></i>Blogs
+                            </a>
+                        </li>
+                        <li class="my-3">
+                            <a href="#" class="text-white text-decoration-none">
+                                <i class="fas fa-chevron-right me-1"></i>About Us
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col-md-6 col-lg-3">
+                    <h5 class="fw-light mb-3">Contact Us</h5>
+                    <div class="d-flex justify-content-start align-items-start my-2 ">
+                        <span class="me-3">
+                            <i class="fas fa-map-marked-alt"></i>
+                        </span>
+                        <span class="fw-light">
+                            Baumas street, London, Britain
+                        </span>
+                    </div>
+
+                    <div class="d-flex justify-content-start align-items-start my-2 ">
+                        <span class="me-3">
+                            <i class="fas fa-envelope"></i>
+                        </span>
+                        <span class="fw-light">
+                            cake-bakery@gmail.com
+                        </span>
+                    </div>
+
+                    <div class="d-flex justify-content-start align-items-start my-2 ">
+                        <span class="me-3">
+                            <i class="fas fa-phone-alt"></i>
+                        </span>
+                        <span class="fw-light">
+                            +44 915 465 102
+                        </span>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3">
+                    <h5 class="fw-light mb-3">Follow Us</h5>
+                    <div class="d-flex">
+                        <ul class="list-unstyled d-flex">
+                            <li>
+                                <a href="#" class="text-white text-decoration-none me-4 fs-4">
+                                    <i class="fab fa-facebook"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="text-white text-decoration-none me-4 fs-4">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="text-white text-decoration-none me-4 fs-4">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="text-white text-decoration-none me-4 fs-4">
+                                    <i class="fab fa-pinterest"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- end of footer -->
+
 
     <!-- jquery -->
     <script src="js/jquery-3.6.0.js"></script>
