--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                     <i class="fa fa-star"></i>
                                 </span>
                             </div>
-                            <p class="my-1">Chocolate Cake with Macarons and wafer Cones</p>
+                            <p class="my-1">Chocolate Cake with Macarons</p>
                             <span class="fw-bold">$ 45.00</span>
                         </div>
                     </div>
